# ropecli

./: pyproject.toml
ropecli/: cli.py  utils.py
tests/fixtures/: README.md
tests/fixtures/module_a/: module_i.py
tests/fixtures/module_b/: module_j.py
tests/fixtures/module_c/: module_k.py
